@@ -1,3 +1,8 @@
+Wed Jan 19 05:50:18 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>
+
+	* lib/drb/mvm.rb: New file.  It wraps MVM's communication channel
+	  to provide you a inter-VM procedure call mechanism.
+
 Wed Jan 19 05:45:38 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>
 
 	* intervm.c (rb_intervm_wormhole_recv): wormhole_shift blocks, so
